🐛 fix: 프롬프트 파일 로딩 시 InputStream 및 UTF-8 인코딩 적용
- resource.getFile() → resource.getInputStream() 방식으로 변경
- JAR 배포 환경에서 파일 읽기 오류 방지
- 파일 인코딩을 UTF-8로 명시하여 OS별 인코딩 이슈 해결